--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,23 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     		<meta name="description" content="{{ site.description_en }} {{ site.description_fr }}" />
+
+		
+    	<!-- Facebook Meta Tags -->
+  	<meta property="og:url" content="https://berthelemy.github.io/faouetinformatique/">
+  	<meta property="og:type" content="website">
+  	<meta property="og:title" content="{{ site.title">
+  	<meta property="og:description" content="{{ site.description_en }} {{ site.description_fr }}">
+  	<meta property="og:image" content="images/button-2076_1280.jpg">
+
+  	<!-- Twitter Meta Tags -->
+  	<meta name="twitter:card" content="summary_large_image">
+  	<meta property="twitter:domain" content="berthelemy.github.io">
+  	<meta property="twitter:url" content="https://berthelemy.github.io/faouetinformatique/">
+  	<meta name="twitter:title" content="{{ site.title }}">
+  	<meta name="twitter:description" content="{{ site.description_en }} {{ site.description_fr }}">
+  	<meta name="twitter:image" content="images/button-2076_1280.jpg">
+        	
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
