--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     	<!-- Facebook Meta Tags -->
   	<meta property="og:url" content="https://berthelemy.github.io/faouetinformatique/">
   	<meta property="og:type" content="website">
-  	<meta property="og:title" content="{{ site.title">
+  	<meta property="og:title" content="{{ site.title }}">
   	<meta property="og:description" content="{{ site.description_en }} {{ site.description_fr }}">
   	<meta property="og:image" content="images/button-2076_1280.jpg">
 
