--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,5 +21,6 @@
   	<meta name="twitter:image" content="images/button-2076_1280.jpg">
         	
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/overrides.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
