--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -1,3 +1,3 @@
 #header {
-  background-image: ../../images/system-2660914_1280.jpg;
+  background-image: url(../../images/system-2660914_1280.jpg);
 }
