--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -1,3 +1,3 @@
 #header {
-  background-image: url(../../images/system-2660914_1280.jpg);
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../../images/system-2660914_1280.jpg);
 }
