--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,12 +3,12 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
+										<li><a href="{{ site.baseurl }}/problem-solving">Problem solving</a></li>
+										<li><a href="{{ site.baseurl }}/websites">Websites and communication</a></li>
+										<li><a href="{{ site.baseurl }}/information-systems">Information systems</a></li>
+										<!--<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
 												<li><a href="#">Lorem ipsum dolor</a></li>
@@ -16,12 +16,12 @@
 												<li><a href="#">Magna phasellus</a></li>
 												<li><a href="#">Etiam dolore nisl</a></li>
 											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										</li>-->
+										
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="{{ site.baseurl }}/prices">Prices</a></li>
+								<li><a href="{{ site.baseurl }}/about">About</a></li>
+								<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 							</ul>
 						</nav>
