--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 									{{ page.tagline }}
 								</p>
 							</header>
-							<a href="#" class="image featured"><img src="{{ site.baseurl }}/images/{{ page.image }}" alt="{{ page.image-alt }}" /></a>
+							<div class="image featured"><img src="{{ site.baseurl }}/images/{{ page.image }}" alt="{{ page.image-alt }}" /></div>
 							{{ page.content }}
 							
 							<p>
