--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -118,7 +118,7 @@
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="{{ site.baseurl }}/rss.xml" class="icon brands fa-facebook-f"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
+											<li><a href="{{ site.baseurl }}/feed.xml" class="icon brands fa-facebook-f"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
 											<li><a href="{{ site.baseurl }}/contact" class="icon brands fa-envelope-f"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
