--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -114,7 +114,7 @@
 										<header>
 											<h3>Learn more?</h3>
 										</header>
-										<p>Follow Faouët Informatique on Facebook for tips and advice, or get in touch.</p>
+										<p>Follow Faouët Informatique on Facebook or your RSS reader for tips and advice, or get in touch.</p>
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
