--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	{% include head.html %}
-	<body class="right-sidebar is-preload">
+	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
