--- a/_includes/_pages/about.html
+++ b/_includes/_pages/about.html
@@ -3,6 +3,6 @@ layout: default
 title: About
 image: wordpress-923188_1280.jpg
 image-alt: Person creating a Wordpress website
-permalink: /about
+permalink: 
 ---
 <p>Some text about me</p>
