--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="{{ site.baseurl }}">Home</a></li>
 								<li>
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
