--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,7 +5,7 @@
 								<li>
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
-										<li><a href="{{ site.baseurl }}/problem-solving">Problem solving</a></li>
+										<li><a href="{{ site.baseurl }}/support">IT Support</a></li>
 										<li><a href="{{ site.baseurl }}/websites">Websites and communication</a></li>
 										<li><a href="{{ site.baseurl }}/information-systems">Information systems</a></li>
 										<!--<li>
