--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -130,7 +130,9 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</li>
+											<li>SIRET: 84816644300012</li>
+											<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
