fix content tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
 								</p>
 							</header>
 							<div class="image featured"><img src="{{ site.baseurl }}/images/{{ page.image }}" alt="{{ page.image-alt }}" /></div>
-							{{ page.content }}
+							
+							{{ content }}
 							
 							<p>
 								Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
