--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/overrides.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		{% if page.datatable %}
+		<link rel="stylesheet" href="//cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+		{% endif %}
 	</head>
