--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,7 @@
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
 										<li><a href="{{ site.baseurl }}/support">IT Support</a></li>
-										<li><a href="{{ site.baseurl }}/websites">Websites and communication</a></li>
+										<li><a href="{{ site.baseurl }}/communication">Websites and communication</a></li>
 										<li><a href="{{ site.baseurl }}/information-systems">Information systems</a></li>
 										<!--<li>
 											<a href="#">And a submenu &hellip;</a>
