--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -2,6 +2,10 @@
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.55)),url(../../images/system-2660914_1280.jpg);
 }
 
+.wrapper {
+  padding: 2rem 0 2rem 0;
+}
+
 .image.featured img {
   height: 250px;
   object-fit: cover;
