--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -1,5 +1,9 @@
 body {
-  color: #3b3b3b;
+  color: #2b2b2b;
+}
+
+p, li, th, td {
+  font-size: 1.2rem;
 }
 
 #header {
@@ -30,4 +34,8 @@ ul.two-columns {
   column-rule-color: #606060;
   list-style-type: none;
   padding: 0;
+}
+
+ul.two-columns li {
+  padding: 0 1rem 0.5rem 0;
 }
