--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -6,6 +6,10 @@ p, li, th, td {
   font-size: 1.05rem;
 }
 
+p.center {
+  text-align: center;
+}
+
 #header {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.55)),url(../../images/system-2660914_1280.jpg);
 }
