--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -10,6 +10,11 @@ p.center {
   text-align: center;
 }
 
+ul.no-bullet {
+  list-style-type: none;
+  padding: 0.2rem 0.1rem 0.2rem 0;
+}
+
 #header {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.55)),url(../../images/system-2660914_1280.jpg);
 }
