--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,9 +5,9 @@
 								<li>
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
-										<li><a href="{{ site.baseurl }}/support">IT Support</a></li>
-										<li><a href="{{ site.baseurl }}/communication">Websites and communication</a></li>
-										<li><a href="{{ site.baseurl }}/information-systems">Information systems</a></li>
+										<li><a href="{{ site.baseurl }}/services/support">IT Support</a></li>
+										<li><a href="{{ site.baseurl }}/services/communication">Websites and communication</a></li>
+										<li><a href="{{ site.baseurl }}/services/information-systems">Information systems</a></li>
 										<!--<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
