--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,9 +20,9 @@
   	<meta name="twitter:description" content="{{ site.description_en }} {{ site.description_fr }}">
   	<meta name="twitter:image" content="images/button-2076_1280.jpg">
         	
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/overrides.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/overrides.css" />
+		<noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/noscript.css" /></noscript>
 		{% if page.datatable %}
 		<link rel="stylesheet" href="//cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
 		{% endif %}
