--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -12,6 +12,10 @@ img.fit {
   object-fit: contain;
 }
 
+img.border {
+  border: 1px solid #2b2b2b;
+}
+
 ul.no-bullet {
   list-style-type: none;
 }
