--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -13,3 +13,4 @@
         <p><a class="button" href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
     </article>
 </div>
+{% endfor %}
