--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,16 +1,15 @@
 {% for item in site.data.portfolio %}
 <h4>{{ item.name }}</h4>
 <div class="row">
-    <article class="col-4 col-12-mobile special">
+    <article class="col-6 col-12-mobile special">
         <a href="{{ item.url }}" target="_blank"><img class="fit border" src="{{ site.baseurl }}/images/portfolio/{{ item.img }}" width="400" alt="{{ item.name }} website screenshot" /></a>
     </article>
     <article class="col-6 col-12-mobile special">
         <ul>
         {%- for attr in item.attributes -%}
-            <li>{{ attr.name }}</li>
+            <li>{{ attr }}</li>
         {%- endfor -%}
         </ul>
-        <p><a class="button" href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
     </article>
 </div>
 {% endfor %}
