--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,8 @@
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
 										<li><a href="{{ site.baseurl }}/services/support">IT Support</a></li>
-										<li><a href="{{ site.baseurl }}/services/communication">Websites and communication</a></li>
+										<li><a href="{{ site.baseurl }}/services/websites">Websites</a></li>
+										<li><a href="{{ site.baseurl }}/services/communication">Communication</a></li>
 										<li><a href="{{ site.baseurl }}/services/information-systems">Information systems</a></li>
 										<!--<li>
 											<a href="#">And a submenu &hellip;</a>
