--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -21,6 +21,7 @@
 										
 									</ul>
 								</li>
+								<li><a href="{{ site.baseurl }}/portfolio">Portfolio</a></li>
 								<li><a href="{{ site.baseurl }}/prices">Prices</a></li>
 								<li><a href="{{ site.baseurl }}/about">About</a></li>
 								<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
