Remove css class

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -4,7 +4,7 @@
     <article class="col-6 col-12-mobile special compressed">
         <img class="fit border" src="{{ site.baseurl }}/images/portfolio/{{ item.img }}" width="400" alt="{{ item.name }} website screenshot" />
     </article>
-    <article class="col-6 col-12-mobile special compressed">
+    <article class="col-6 col-12-mobile special">
         <ul>
         {%- for attr in item.attributes -%}
             <li>{{ attr }}</li>
