--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,16 +1,19 @@
+{% assign count = 0 %}
 {% for item in site.data.portfolio %}
-<h3>{{ item.name }}</h3>
-<div class="row">
+
+{% if count = 0 %}<div class="row">{% endif %}
     <article class="col-6 col-12-mobile special compressed">
+        <h3>{{ item.name }}</h3>
+        <p>{{ item.description }}</p>
         <img class="fit border" src="{{ site.baseurl }}/images/portfolio/{{ item.img }}" width="400" alt="{{ item.name }} website screenshot" />
-    </article>
-    <article class="col-6 col-12-mobile special">
         <ul>
-        {%- for attr in item.attributes -%}
-            <li>{{ attr }}</li>
-        {%- endfor -%}
-        </ul>
-        <p><a href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
+            {%- for attr in item.attributes -%}
+                <li>{{ attr }}</li>
+            {%- endfor -%}
+            </ul>
+            <p><a href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
     </article>
-</div>
+    
+{% if count = 1 %}</div>{% endif %}
+{% if count = 0 % }{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
 {% endfor %}
