--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,7 +1,7 @@
 {% assign count = 0 %}
 {% for item in site.data.portfolio %}
 
-{% if count = 0 %}<div class="row">{% endif %}
+{% if count == 0 %}<div class="row">{% endif %}
     <article class="col-6 col-12-mobile special compressed">
         <h3>{{ item.name }}</h3>
         <p>{{ item.description }}</p>
@@ -14,6 +14,6 @@
             <p><a href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
     </article>
     
-{% if count = 1 %}</div>{% endif %}
-{% if count = 0 % }{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
+{% if count == 1 %}</div>{% endif %}
+{% if count == 0 % }{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
 {% endfor %}
