--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -13,7 +13,7 @@
             </ul>
             <p><a href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
     </article>
-    {{ count }}
+
 {% if count == 1 %}</div>{% endif %}
-{% if count == 0 % }{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
+{% if count == 0 % }xxtesting{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
 {% endfor %}
