--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -15,5 +15,5 @@
     </article>
 
 {% if count == 1 %}</div>{% endif %}
-{% if count == 0 % }xxtesting{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
+{% if count == 0 %}{% assign count = 1 %}{% else %}{% assign count = 0 %}{% endif %}
 {% endfor %}
