--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,13 @@
 							{{ content }}
 
 							<hr>
-							{% if page.cta-hide != "TRUE" %}
-								{% if page.cta %}
-								<p class="center"><a class="button" href="{{ site.baseurl }}/{{ page.cta-url}}">{{ page.cta }}</a></p>
-								{% else %}
-								<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no-obligation quote</a></p>
-								{% endif %}
+							{% if page.hide-cta = "hide" %}
+							{% elseif page.cta %}
+							<p class="center"><a class="button" href="{{ site.baseurl }}/{{ page.cta-url}}">{{ page.cta }}</a></p>
+							{% else %}
+							<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no-obligation quote</a></p>
 							{% endif %}
+							
 							
 							<p>
 								Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
