--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
 							<hr>
 							{% if page.hide-cta = "hide" %}
-							{% elseif page.cta %}
+							{% elsif page.cta %}
 							<p class="center"><a class="button" href="{{ site.baseurl }}/{{ page.cta-url}}">{{ page.cta }}</a></p>
 							{% else %}
 							<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no-obligation quote</a></p>
