--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -117,9 +117,9 @@
 										<p>Follow Faouët Informatique on Facebook or your RSS reader for tips and advice, or get in touch.</p>
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-											<li><a href="https://facebook.com/faouetinformatique" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="{{ site.baseurl }}/feed.xml" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
-											<li><a href="{{ site.baseurl }}/contact" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
+											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
+											<li><a href="{{ site.baseurl }}/contact" title="Contact" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
@@ -132,7 +132,8 @@
 										<ul class="menu">
 											<li>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</li>
 											<li>SIRET: 84816644300012</li>
-											<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+											<li>Build: <a href="{{ site.baseurl }}/>{{ site.title }}</a></li>
 										</ul>
 									</div>
 
