--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,10 +5,10 @@
 								<li>
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
-										<li><a href="{{ site.baseurl }}/services/support">IT Support</a></li>
+										<li><a href="{{ site.baseurl }}/services/strategy">Strategy</a></li>
 										<li><a href="{{ site.baseurl }}/services/websites">Websites</a></li>
-										<li><a href="{{ site.baseurl }}/services/communication">Communication</a></li>
 										<li><a href="{{ site.baseurl }}/services/information-systems">Information systems</a></li>
+										<li><a href="{{ site.baseurl }}/services/support">IT Support</a></li>
 										<!--<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
