--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,6 +5,9 @@
 								<li>
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
+										{% for service in site.data.services %}
+										<li><a href="{{ site.baseurl }}/{{ service.url }}">{{ service.name }}</a></li>
+										{% end for %}
 										<li><a href="{{ site.baseurl }}/services/strategy">Strategy</a></li>
 										<li><a href="{{ site.baseurl }}/services/websites">Websites</a></li>
 										<li><a href="{{ site.baseurl }}/services/information-systems">Information systems</a></li>
