HTML validation fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -133,7 +133,7 @@
 											<li>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</li>
 											<li>SIRET: 84816644300012</li>
 											<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-											<li>Build: <a href="{{ site.baseurl }}/>{{ site.title }}</a></li>
+											<li>Build: <a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
 										</ul>
 									</div>
 
