--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
-<head>
+<head lang="en">
 		<title>{{ site.title }}</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    		<meta name="description" content="{{ site.description_en }} {{ site.description_fr }}" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<meta name="description" content="{{ site.description_en }} {{ site.description_fr }}">
 
 		
     	<!-- Facebook Meta Tags -->
@@ -20,10 +20,10 @@
   	<meta name="twitter:description" content="{{ site.description_en }} {{ site.description_fr }}">
   	<meta name="twitter:image" content="images/button-2076_1280.jpg">
         	
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/overrides.css" />
-		<noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/overrides.css">
+		<noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/noscript.css"></noscript>
 		{% if page.datatable %}
-		<link rel="stylesheet" href="//cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+		<link rel="stylesheet" href="//cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 		{% endif %}
 	</head>
