--- a/_includes/services.html
+++ b/_includes/services.html
@@ -35,14 +35,14 @@
                 <header>
                     <h3><a href="{{ site.baseurl }}/services/info-systems">Information systems</a></h3>
                 </header>
-                <p>Find the right hardware and software for your needs.</p></p>
+                <p>Find the right hardware and software for your needs.</p>
             </article>
             <article class="col-3 col-12-mobile special">
                 <a href="{{ site.baseurl }}/services/communication" class="image featured" title="Communication"><img src="images/digital-marketing-1433427_1280.jpg" alt="" /></a>
                 <header>
                     <h3><a href="{{ site.baseurl }}/services/communication">Communication</a></h3>
                 </header>
-                <p>Keep in touch efficiently and accurately</p></p>
+                <p>Keep in touch efficiently and accurately</p>
             </article>
         </div>
     </section>
