--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
 							<header>
 								{% assign url = page.url | split: '/' %}
 								{% assign len = url | size %}
+						<p>{{ url }}, {{ len }}, {{ url[len-1] }}</p>
 								{% if url[len-1] == "services" %}
 								<h2><a href="{{ site.baseurl }}/services">Services</a> / {{ page.title }}</h2>
 								{% else %}
