--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,7 @@
 									<a href="{{ site.baseurl }}/services">Services</a>
 									<ul>
 										{% for service in site.data.services %}
-										<li><a href="{{ site.baseurl }}/{{ service.url }}">{{ service.name }}</a></li>
+										<li><a href="{{ site.baseurl }}{{ service.url }}">{{ service.name }}</a></li>
 										{% endfor %}
 										<!--<li>
 											<a href="#">And a submenu &hellip;</a>
