--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,9 +2,9 @@
 <div class="wrapper style1">
 
     <section id="features" class="container special">
-        <!--<header>
-            <h2>Heading</h2>
-            <p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+        <header>
+            <h2>Services</h2>
+            
         </header>-->
         <div class="row">
             {% for service in site.data.services %}
