--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -114,10 +114,11 @@
 										<header>
 											<h3>Learn more?</h3>
 										</header>
-										<p>Follow Faouët Informatique on Facebook or your RSS reader for tips and advice, or get in touch.</p>
+										<p>Follow Faouët Informatique on Facebook, LinkedIn or your RSS reader for tips and advice, or get in touch.</p>
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<li><a href="https://linkedin.com/faouetinformatique" title="Facebook" class="icon brands fa-linkedin-f"><span class="label">LinkedIn</span></a></li>
 											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
 											<li><a href="{{ site.baseurl }}/contact" title="Contact" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
