--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -118,7 +118,7 @@
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIN" class="icon brands fa-linkedin-f"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIN" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
 											<li><a href="{{ site.baseurl }}/contact" title="Contact" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
