--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -24,6 +24,10 @@ ul.no-bullet li {
   padding: 0.8rem 0rem 0.2rem 0;
 }
 
+blockquote {
+  margin-bottom: 2rem;
+}
+
 #header {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.55)),url(../../images/system-2660914_1280.jpg);
 }
