--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 							{% elsif page.cta %}
 							<p class="center"><a class="button" href="{{ site.baseurl }}/{{ page.cta-url}}">{{ page.cta }}</a></p>
 							{% else %}
-							<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no-obligation quote</a></p>
+							<p class="center"><a class="button" href="mailto:{{ site.email }}?subject=Quote request">Request a no-obligation quote</a></p>
 							{% endif %}
 							
 							
