--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -23,6 +23,6 @@
 								<li><a href="{{ site.baseurl }}/portfolio">Portfolio</a></li>
 								<li><a href="{{ site.baseurl }}/prices">Prices</a></li>
 								<li><a href="{{ site.baseurl }}/about">About</a></li>
-								<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+								<!--<li><a href="{{ site.baseurl }}/contact">Contact</a></li>-->
 							</ul>
 						</nav>
