--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -118,9 +118,9 @@
 										<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIN" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIn" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
-											<li><a href="mailto:{{ site.email }}" title="Email {{ site.email }}" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
+											<li><a href="mailto:{{ site.email }}?subject=Website query" title="Email {{ site.email }}" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<li><a href="tel:{{ site.phone }}" title="Phone" class="icon brands"><i class="fas fa-phone"></i><span class="label">Phone</span></a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
@@ -128,7 +128,7 @@
 											<!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
 										</ul>
 									</section>
-									
+
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
