content and cta

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,6 @@
 <!-- Services -->
 <div class="wrapper style1">
+    {% include cta.html %}
 
     <section id="features" class="container special">
         <header>
