--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
             
         </header>
         <div class="row">
-            {#- Count number of services to display -#}
+            <!-- Count number of services to display -->
             {%- assign count = 0 -%}
             {%- for service in site.services -%}
             {%- if page.url !=service.url -%}
