--- a/_includes/services.html
+++ b/_includes/services.html
@@ -21,8 +21,8 @@
             {%- assign count = count | plus:1 -%}
             {%- endif -%}
             {%- endfor -%}
-            {%- assign columns = 12 | divided-by:count -%}
-
+            {%- assign columns = 12 | divided_by:count -%}
+{{ count }}, {{ columns }}
             {%- for service in site.services -%}
             {%- if page.url != service.url -%}
             <article class="col-{{ columns }} col-12-mobile special">
