--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,6 +1,6 @@
 {% if page.hide-cta and page.hide-cta == "hide" %}
 <!--No CTA required -->
-{% elsif page.cta %}
+{% elsif page.cta %}xxx
 <p class="center"><a class="button" href="{{ site.baseurl }}/{{ page.cta-url}}">{{ page.cta }}</a></p>
 {% else %}
 <p class="center"><a class="button" href="{{ site.baseurl }}/{{ contact }}">Request a no-obligation quote</a></p>
