--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -29,8 +29,18 @@ blockquote {
 }
 
 #header {
+  position: absolute;
+  padding-top:1rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
   position: fixed;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.55)),url(../../images/system-2660914_1280.jpg);
+}
+
+#nav {
+  position: relative;
 }
 
 .image.featured img {
