--- a/_layouts/default_simple.html
+++ b/_layouts/default_simple.html
@@ -5,8 +5,14 @@
 
     <body>
         <header>
-          <h1>Hello, world</h1>
-          <p>Welcome to my website!</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+            <h1>{{ site.title }}</h1>
+          <p>{{ site.description_en }}</p>
         </header>
       
         <main>
